Bug 722690 - buttons are too close to edge. r+ui-r=andreasn

--- a/calendar/base/themes/winstripe/win-aero/calendar-event-dialog.css
+++ b/calendar/base/themes/winstripe/win-aero/calendar-event-dialog.css
@@ -24,6 +24,11 @@
   background-color: transparent
 }
 
+#event-toolbar {
+  -moz-margin-start: 0;
+  padding: 1px 0 2px;
+}
+
 #event-toolbar[iconsize="small"] .toolbarbutton-1 .toolbarbutton-icon {
   margin: 0;
   width: 18px;
